--- a/force-app/main/default/lwc/chelseaTemplate/chelseaTemplate.html
+++ b/force-app/main/default/lwc/chelseaTemplate/chelseaTemplate.html
@@ -1,7 +1,19 @@
 <template>
     <div class="chelsea">
-        <div class="chelsea__header">Header</div>
-        <div class="chelsea__main">Main</div>
-        <div class="chelsea__footer">Footer</div>
+        <header class="chelsea__header">
+             <div class="chelsea__container">
+                <slot name="header">Header</slot>
+            </div>
+        </header>
+        <main class="chelsea__main">
+            <div class="chelsea__container">
+                <slot name="main">Main</slot>
+            </div>
+        </main>
+        <footer class="chelsea__footer">
+            <div class="chelsea__container">
+                <slot name="footer">Footer</slot>
+            </div>
+        </footer>
     </div>
 </template>
