--- a/force-app/main/default/lwc/step2/step2.html
+++ b/force-app/main/default/lwc/step2/step2.html
@@ -2,5 +2,10 @@
     <div>
         <h1>Step 2</h1>
         <button onclick={nextStep}>Step 2</button>
+        <c-fc-button 
+            class="submit-js" 
+            onclick={gg} 
+            title="starten">
+        </c-fc-button>
     </div>
 </template>
