--- a/force-app/main/default/lwc/fcButton/fcButton.html
+++ b/force-app/main/default/lwc/fcButton/fcButton.html
@@ -1,3 +1,3 @@
 <template>
-    <button class={className} disabled={_disabled}>{title}</button>
+    <button class={className} disabled={disabled}>{title}</button>
 </template>
