--- a/force-app/main/default/lwc/templateWrapperDe/templateWrapperDe.html
+++ b/force-app/main/default/lwc/templateWrapperDe/templateWrapperDe.html
@@ -3,10 +3,10 @@
         <c-fc-header slot="header"></c-fc-header>
         <c-step-router slot="main" current-step={args}>
             <c-step order="1">
-                <c-step-contact-details data-step></c-step-contact-details>
+                <c-step-contact-details data-step lang={lang} step-content="contactDetails_DE" apex-service="E2EContactDetailsBasicImpl"></c-step-contact-details>
             </c-step>
-            <c-step order="3">
-                <c-step-2 data-step></c-step-2>
+            <c-step order="2">
+                <c-step-search-company data-step lang={lang} step-content="search_company_de" apex-service="E2EContactDetailsBasicImpl"></c-step-search-company>
             </c-step>
             <c-step order="4">
                 <c-step-1 data-step></c-step-1>
